--- a/hybrid_search/hybrid_search_inflation.ipynb
+++ b/hybrid_search/hybrid_search_inflation.ipynb
@@ -66,7 +66,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install sentence-transformers langchain langchain-community"
+    "!pip install sentence-transformers 'langchain<1.0.0' langchain-community"
    ]
   },
   {
@@ -2869,7 +2869,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2883,7 +2883,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
